Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5276

[AMQP 1.0] node resolution doesn't take into account requested type

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.24
    • 0.25
    • C++ Broker
    • None

    Description

      E.g. if there is both a queue and exchange of the same name, any explicit node type in the address is ignored. Or if the node type is specified in conjunction wit create and a node of a different type already exists, that existing type will be used.

      The node type is conveyed through a (currently) qpidd specific capability. It is not required, but if specified should be honoured.

      Attachments

        Activity

          People

            gsim Gordon Sim
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: