QPID-5276: improve node resolution where specific capability is requested

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1537051 13f79535-47bb-0310-9956-ffa450edef68